# qraft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
catalog_app/: index.html  package-lock.json  package.json  vite.config.ts
catalog_app/src/: App.tsx  index.css
catalog_app/src/components/detail-panel/: ColumnsTab.tsx  DependenciesTab.tsx  DetailPanel.tsx  SqlTab.tsx
catalog_app/src/components/lineage/: AnimatedEdge.tsx  LineageGraph.tsx  ModelNode.tsx  layout.ts
catalog_app/src/components/sidebar/: ModelTree.tsx  SearchInput.tsx  Sidebar.tsx
catalog_app/src/hooks/: use-manifest.ts  use-test-results.ts
catalog_app/src/lib/: graph.ts
catalog_app/src/types/: manifest.ts
docs/: architecture.md  benchmarks.md  catalog.md  cli_reference.md  code_reuse.md  concepts.md  configuration.md  feature_comparison.md  getting_started.md  materialization_types.md  migrating_from_dbt.md  testing.md  why_qraft.md
examples/blog_analytics/: .gitignore  README.md  project.yaml
examples/blog_analytics/docker/: pg_init.sql
examples/blog_analytics/models/marts/: fct_author_summary.sql
examples/blog_analytics/models/staging/: stg_authors.sql  stg_comments.sql  stg_posts.sql
examples/datalakehouse_trino/: README.md  docker-compose.base.yml
examples/datalakehouse_trino/catalog/: source_mysql.properties  source_pg.properties  warehouse.properties
examples/datalakehouse_trino/metadata_init/: init.sql
examples/ecommerce_basic/: .env.example  README.md  docker-compose.yml  project.yaml
examples/ecommerce_basic/docker/: mysql_init.sql
examples/ecommerce_basic/macros/: ecommerce_utils.py
examples/ecommerce_basic/models/bronze/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
examples/ecommerce_basic/models/gold/: fct_customer_summary.sql  fct_revenue_by_category.sql
examples/ecommerce_basic/models/silver/: int_orders_enriched.sql  int_product_sales.sql
examples/postgres_to_duckdb/: .gitignore  README.md  docker-compose.yml  project.yaml
examples/postgres_to_duckdb/docker/: pg_init.sql
examples/postgres_to_duckdb/models/marts/: fct_product_performance.sql  (+1 more)
examples/saas_analytics/: .gitignore  README.md  docker-compose.yml  project.yaml
examples/saas_analytics/docker/: pg_init.sql
examples/saas_analytics/init/: 01_seed.sql
examples/saas_analytics/macros/: saas_utils.py
python/qraft/: __init__.py  __main__.py  _core.pyi  cli.py  manifest.py
python/qraft-utils/: README.md  pyproject.toml
python/qraft-utils/qraft_utils/: __init__.py  conditions.py  date.py  engine.py  scalar.py  structural.py
python/qraft-utils/tests/: test_conditions.py  test_date.py  test_scalar.py  test_structural.py
python/qraft/catalog/: generator.py  server.py
python/qraft/compiler/: bridge.py  macro_expander.py  macro_loader.py
python/qraft/config/: loader.py  models.py  resolver.py
python/qraft/dag/: bridge.py
python/qraft/engine/: __init__.py  base.py  duckdb_engine.py  mysql_engine.py  postgres_engine.py  trino_engine.py
python/qraft/runner/: runner.py
python/qraft/testing/: __init__.py  discovery.py  generic.py  models.py  results.py  runner.py
python/qraft/tests/: conftest.py  test_catalog.py  test_cli.py  test_compiler_bridge.py  test_config.py  test_config_validation.py  test_dag_bridge.py  test_engine_duckdb.py  test_integration.py  test_macro_expander.py  test_macro_integration.py  test_macro_loader.py  test_macro_parser.py  test_manifest.py  test_runner.py  test_testing.py  test_utils_env.py
python/qraft/utils/: env.py  output.py
rust/: Cargo.toml
rust/src/: errors.rs  lib.rs  types.rs
rust/src/compiler/: batch.rs  batch_tests.rs  macro_parser.rs  macro_parser_tests.rs  mod.rs  parser.rs  parser_tests.rs  resolver.rs  resolver_tests.rs
rust/src/dag/: builder.rs  builder_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  selector.rs  selector_tests.rs  sorter.rs  sorter_tests.rs  validator.rs  validator_tests.rs
scripts/: benchmark.py  publish_pypi.sh  publish_testpypi.sh
(+21 files in other folders)
