[package]
name = "qraft-core"
version = "0.1.0"
edition = "2024"
description = "Rust core for Qraft: SQL parsing, DAG, and compilation engine"
repository = "https://github.com/ravidhu/qraft"
license = "MIT"
authors = ["Ravidhu Dissanayake <ravidhu.dissa@gmail.com>"]

[lib]
name = "qraft_core"
# cdylib = shared lib pour PyO3, rlib = pour cargo test
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
regex = "1"
petgraph = "0.6"
strsim = "0.11"
thiserror = "2"

[dev-dependencies]
