[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qraft-utils"
version = "0.1.0"
description = "Standard macro library for Qraft SQL projects — cross-database SQL helpers for DuckDB, PostgreSQL, MySQL, and Trino"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ravidhu Dissanayake", email = "ravidhu.dissa@gmail.com" },
]
keywords = ["qraft", "sql", "macros", "data-engineering", "dbt", "duckdb", "postgres", "trino"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
dependencies = []

[project.optional-dependencies]
schema = ["sqlalchemy>=2.0"]  # only needed for star_except
dev = [
    "pytest>=7.0",
    "sqlalchemy>=2.0",
]

[project.urls]
Homepage = "https://github.com/ravidhu/qraft"
Repository = "https://github.com/ravidhu/qraft"
Documentation = "https://github.com/ravidhu/qraft/blob/main/docs/code_reuse.md"
Issues = "https://github.com/ravidhu/qraft/issues"
Changelog = "https://github.com/ravidhu/qraft/blob/main/CHANGELOG.md"
